--- a/index.html
+++ b/index.html
@@ -11,50 +11,61 @@
       sizes="32x32"
       href="./assets/images/favicon-32x32.png"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
 
     <title>Frontend Mentor | Results summary component</title>
   </head>
   <body>
-    <main>
-      <header>
-        <h1>Your Result</h1>
-        <aside class="number">
-          <p>76</p>
-          <span>of 100</span>
-        </aside>
-        <article class="description">
-          <section class="great">
-            <h1>Great</h1>
-            <p>
-              You scored higher than 65% of the people who have taken these
-              tests.
-            </p>
-          </section>
-        </article>
-      </header>
-      <section class="summary">
-        <h2>Summary</h2>
-        <table>
-          <tr>
-            <th class="aria-row">Reaction</th>
-            <td>80 / 100</td>
-          </tr>
-          <tr>
-            <th class="aria-row">Memory</th>
-            <td>92 / 100</td>
-          </tr>
-          <tr>
-            <th class="aria-row">Verbal</th>
-            <td>61 / 100</td>
-          </tr>
-          <tr>
-            <th class="aria-row">Visual</th>
-            <td>72 / 100</td>
-          </tr>
-        </table>
-      </section>
+    <main class="container">
+      <!-- Header section -->
+      <article class="row">
+        <header class="description col-md-6 d-flex flex-column">
+          <h1 class="text-center d-sm-block d-md-none">Your Result</h1>
+          <aside
+            class="number text-center d-flex flex-column align-items-center justify-content-center"
+          >
+            <p>76</p>
+            <span>of 100</span>
+          </aside>
+          <h1 class="text-center">Great</h1>
+          <p class="text-center">
+            You scored higher than 65% of the people who have taken these tests.
+          </p>
+        </header>
+        <!-- Article section -->
+
+        <!-- Summary section -->
+        <section class="summary col-md-6">
+          <h2 class="text-center">Summary</h2>
+          <table class="table table-striped table-sm">
+            <tr>
+              <th class="aria-row">Reaction</th>
+              <td>80 / 100</td>
+            </tr>
+            <tr>
+              <th class="aria-row">Memory</th>
+              <td>92 / 100</td>
+            </tr>
+            <tr>
+              <th class="aria-row">Verbal</th>
+              <td>61 / 100</td>
+            </tr>
+            <tr>
+              <th class="aria-row">Visual</th>
+              <td>72 / 100</td>
+            </tr>
+          </table>
+        </section>
+      </article>
     </main>
-    <div class="attribution">
+
+    <!-- Attribution section -->
+    <div class="attribution text-center">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
