--- a/index.html
+++ b/index.html
@@ -3,73 +3,40 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-    <link rel="stylesheet" href="styles/style.css" />
+
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="./assets/images/favicon-32x32.png"
     />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
 
-    <title>Frontend Mentor | Results summary component</title>
+    <title>Frontend Mentor / Result Summary Component</title>
+
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
-    <main class="container">
-      <!-- Header section -->
-      <article class="row">
-        <header class="description col-md-6 d-flex flex-column">
-          <h1 class="text-center d-sm-block d-md-none">Your Result</h1>
-          <aside
-            class="number text-center d-flex flex-column align-items-center justify-content-center"
-          >
-            <p>76</p>
-            <span>of 100</span>
-          </aside>
-          <h1 class="text-center">Great</h1>
-          <p class="text-center">
-            You scored higher than 65% of the people who have taken these tests.
-          </p>
-        </header>
-        <!-- Article section -->
-
-        <!-- Summary section -->
-        <section class="summary col-md-6">
-          <h2 class="text-center">Summary</h2>
-          <table class="table table-striped table-sm">
-            <tr>
-              <th class="aria-row">Reaction</th>
-              <td>80 / 100</td>
-            </tr>
-            <tr>
-              <th class="aria-row">Memory</th>
-              <td>92 / 100</td>
-            </tr>
-            <tr>
-              <th class="aria-row">Verbal</th>
-              <td>61 / 100</td>
-            </tr>
-            <tr>
-              <th class="aria-row">Visual</th>
-              <td>72 / 100</td>
-            </tr>
-          </table>
-        </section>
-      </article>
-    </main>
-
-    <!-- Attribution section -->
-    <div class="attribution text-center">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+    <div class="result-summary-container">
+      <div class="result-container">
+        <h3>Your Result</h3>
+        <div class="circle-container">
+          <div class="circle-content">
+            <h1>76</h1>
+            <p>of 100</p>
+          </div>
+        </div>
+        <h2>Great</h2>
+        <p class="result-description">
+          You scored higher than 65% of the people who have taken these tests.
+        </p>
+      </div>
+      <div class="summery-container">
+        <div class="summery-secondContainer">
+          <h2 class="summery-title">Summery</h2>
+          <div class="detailed-summary" id="detail-summery-items"></div>
+        </div>
+      </div>
     </div>
+    <script src="./script.js"></script>
   </body>
 </html>
