--- a/index.html
+++ b/index.html
@@ -18,21 +18,23 @@
   <body>
     <div class="result-summary-container">
       <div class="result-container">
-        <h3>Your Result</h3>
-        <div class="circle-container">
-          <div class="circle-content">
-            <h1>76</h1>
-            <p>of 100</p>
+        <div class="result-secondContainer">
+          <h3>Your Result</h3>
+          <div class="circle-container">
+            <div class="circle-content">
+              <h1>76</h1>
+              <p>of 100</p>
+            </div>
           </div>
+          <h2>Great</h2>
+          <p class="result-description">
+            You scored higher than 65% of the people who have taken these tests.
+          </p>
         </div>
-        <h2>Great</h2>
-        <p class="result-description">
-          You scored higher than 65% of the people who have taken these tests.
-        </p>
       </div>
       <div class="summery-container">
         <div class="summery-secondContainer">
-          <h2 class="summery-title">Summery</h2>
+          <h2 class="summery-title">Summary</h2>
           <div class="detailed-summary" id="detail-summery-items"></div>
         </div>
       </div>
