--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
               <p>of 100</p>
             </div>
           </div>
+        </div>
+        <div class="result-description">
           <h2>Great</h2>
-          <p class="result-description">
+          <p>
             You scored higher than 65% of the people who have taken these tests.
           </p>
         </div>
@@ -37,6 +39,7 @@
           <h2 class="summery-title">Summary</h2>
           <div class="detailed-summary" id="detail-summery-items"></div>
         </div>
+        <button class="click_me">Continue</button>
       </div>
     </div>
     <script src="./script.js"></script>
