still solving, don't know what's wrong

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <h2 class="summery-title">Summary</h2>
           <div class="detailed-summary" id="detail-summery-items"></div>
         </div>
-        <button class="click_me">Continue</button>
+        <button id="btn" class="click_me">Continue</button>
       </div>
     </div>
     <script src="./script.js"></script>
